# rust-lox-vm

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: args.rs  chunk.rs  class_compiler.rs  compiler.rs  error.rs  gc.rs  lox.rs  lox_vector.rs  main.rs  memory.rs  op.rs  parser.rs  printer.rs  scanner.rs  token.rs  value.rs  vm.rs
src/datastructures/: hash_table.rs  memory.rs  mod.rs  vector.rs
src/gc/: alloc.rs  markable.rs  mod.rs
src/parser/: expression.rs  mod.rs  statement.rs
src/types/: bound_method.rs  class.rs  closure.rs  function.rs  instance.rs  mod.rs  obj.rs  obj_ref.rs  string.rs  upvalue.rs  value.rs
src/vm/: callframe.rs  gc.rs  mod.rs  native_functions.rs
tests/: block_not_closed.lox  classes.lox  classes_in_classes.lox  closures_escaping.lox  closures_unescaping.lox  delayed_super.lox  duplicate_variable_declaration.lox  error_invalid_superclass.lox  for.lox  for_syntax_errors.lox  function_arguments.lox  if.lox  inheritance.lox  initializers.lox  invalid_assignment_target.lox  invoke_property.lox  lexer_fails.lox  local_variables.lox  logical.lox  methods.lox  print_string.lox  property.lox  return.lox  super.lox  synchronization_works.lox  too_many_local_variables.lox  use_in_own_initializer.lox  variable_assignment.lox  variable_definition.lox  while.lox
