[package]
name = "rust-lox-vm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fred Roth"]
description = "An interpreter for the Lox language (http://craftinginterpreters.com/)"

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
tracing = { version = "0.1.40", features = ["max_level_debug", "release_max_level_info"]}
tracing-subscriber = "0.3.18"
