[package]
name = "rust-lox-vm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fred Roth"]
description = "An interpreter for the Lox language (http://craftinginterpreters.com/)"

[dependencies]
clap = { version = "4.5.9", features = ["derive", "env", "string"] }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.64"
tracing = { version = "0.1.40", features = ["max_level_debug", "release_max_level_info"]}
tracing-subscriber = "0.3.18"
directories = "5.0.1"
rustyline = {version= "14.0.0", features = ["with-file-history", "derive"]}
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5"